src/main/java/com/github/xiaolyuh/spel/SpEL.bnf
// 第七步:定义bnf语法
// 第八步:右键生成parse code
// 第九步:右键生成flex文件
{
  parserClass="com.github.xiaolyuh.spel.parser.SpelParser"
  parserUtilClass="com.github.xiaolyuh.spel.parser.SpelParserUtil"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Spel"
  psiImplClassSuffix="Impl"
  psiPackage="com.github.xiaolyuh.spel.psi"
  psiImplPackage="com.github.xiaolyuh.spel.psi.impl"

  elementTypeHolderClass="com.github.xiaolyuh.spel.psi.SpelTypes"
  elementTypeClass="com.github.xiaolyuh.spel.psi.SpelElementType"
  tokenTypeClass="com.github.xiaolyuh.spel.psi.SpelTokenType"
  psiImplUtilClass="com.github.xiaolyuh.spel.psi.impl.SpelPsiImplUtil"

  tokens=[
    SINGLE_QUOTED_STRING="regexp:'([^\\\'\r\n]|\\[^\r\n])*'"
    VARIBLE_NAME="regexp:#[a-zA-Z][\w_\\$]*"
    FIELD_OR_METHOD_NAME_STR="regexp:[a-zA-Z][\w_\\$]*"
  ]
}

spelFile ::= item_*
private item_ ::= spel

string_literal ::= SINGLE_QUOTED_STRING
variable ::= VARIBLE_NAME
field_or_method_name ::= FIELD_OR_METHOD_NAME_STR
method_param ::= spel
method_params ::= method_param (',' method_param)?
method_call ::= '(' method_params? ')'
field_or_method ::= field_or_method_name method_call?
spel ::= string_literal | variable ('.' field_or_method)*
